--- a/src/views/index.html
+++ b/src/views/index.html
@@ -4,11 +4,12 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>{{ site.title }}{{# page }} | {{ page.title }}{{/ page }}</title>
+  <title>{{site.title}}</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body class="hidden">
   <div id="app">{{{reactMarkup}}}</div>
 
-  <script src="dist/bundle.js"></script>
+  <script src="bundle.js"></script>
 </body>
 </html>
