--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,6 +1,10 @@
 @import 'variables';
 
-html {
+.hidden {
+  display: none;
+}
+
+.isomorphic-example {
   color: $color-text;
   font-family: $font-brand;
   font-size: 14px;
@@ -29,6 +33,27 @@ html {
   }
 
   .no-match & {
-    background-color: $color-storm;
+    background-color: $color-orange;
+  }
+}
+
+.navigation {
+  background-color: $color-storm;
+
+  ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+
+    li {
+      display: inline-block;
+      padding: 10px 0 10px 25px;
+    }
+  }
+
+  a {
+    color: $color-white;
+    text-decoration: none;
+    text-transform: uppercase;
   }
 }
